--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div id="bth"><button  class="btnLogin-Popup" onclick="() => btnLogin()"><a href="bth"></a> Login</button></div>
+        <div ><button  class="btnLogin-Popup" onclick="() => btnLogin()"><a href="#login"></a> Login</button></div>
     </header>
     <div class="wrapper active">
         <span class="icon-close"><i class='bx bxs-tag-x'></i></span>
